examples/test/testpolicy13645.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13645
  namespace: namespace6
spec:
  podSelector:
    matchLabels:
      key37: value1
      key40: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value19
      podSelector:
        matchLabels:
          key8: value35
          key47: value24
